--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -25,6 +25,6 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Ejecutar tests
-      run: |
-        pytest tests/
+    # - name: Ejecutar tests
+      # run: |
+        # pytest tests/
